--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,29 +1,18 @@
 {
-    // Use IntelliSense to find out which attributes exist for C# debugging
-    // Use hover for the description of the existing attributes
-    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-    "version": "0.2.0",
-    "configurations": [
+   // Use IntelliSense to find out which attributes exist for C# debugging
+   // Use hover for the description of the existing attributes
+   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+   "version": "0.2.0",
+   "configurations": [
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Corsinvest.Proxmox.Metrics/bin/Debug/netcoreapp3.0/cv4pve-metrics.dll",
-            "args": [
-                "--host",
-                "10.92.90.91",
-                "--username",
-                "test@pam",
-                "--password",
-                "test",
-                "--influxdb-url",
-                "http://10.92.100.14:8086",
-                "--influxdb-db",
-                "proxmox"
-            ],
-            "cwd": "${workspaceFolder}/src/Corsinvest.Proxmox.Metrics",
+            "program": "${workspaceFolder}/old/src/Corsinvest.Proxmox.Metrics/bin/Debug/netcoreapp3.0/cv4pve-metrics.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/old/src/Corsinvest.Proxmox.Metrics",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
