--- a/src/telegraf-pve-node/etc/telegraf/telegraf.conf
+++ b/src/telegraf-pve-node/etc/telegraf/telegraf.conf
@@ -105,7 +105,7 @@
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
-  database = "telegraf_proxmox"
+  database = "db_telegraf_proxmox"
 
   ## The value of this tag will be used to determine the database.  If this
   ## tag is not set the 'database' option is used as the default.
