--- a/src/docker/influxdb/config/influxdb.conf
+++ b/src/docker/influxdb/config/influxdb.conf
@@ -107,6 +107,7 @@ bind-address = ":8088"
   batch-timeout = "1s"
   log-point-errors = true
 
+#For Proxmox
 [[udp]]
   enabled = true
   bind-address = ":8089"
@@ -117,6 +118,18 @@ bind-address = ":8088"
   read-buffer = 0
   batch-timeout = "1s"
   precision = ""
+
+#For Ceph
+#[[udp]]
+#  enabled = true
+#  bind-address = ":8094"
+#  database = "db_ceph"
+#  retention-policy = ""
+#  batch-size = 1000
+#  batch-pending = 10
+#  read-buffer = 0
+#  batch-timeout = "1s"
+#  precision = ""
 
 [continuous_queries]
   log-enabled = true
