Fix rsyslog to UDP

--- a/src/telegraf-pve-node/etc/rsyslog.d/telegraf.conf
+++ b/src/telegraf-pve-node/etc/rsyslog.d/telegraf.conf
@@ -1,8 +1,8 @@
-#$WorkDirectory /tmp/rsyslog # temporary directory for storing data 
-#$ActionQueueType LinkedList # use asynchronous processing 
-#$ActionQueueFileName srvrfwd # set file name, also enables disk mode 
-#$ActionResumeRetryCount -1 # infinite retries on insert failure 
-#$ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down 
-#$ModLoad imudp #loads the udp module 
-#listen for messages on udp localhost:514 $UDPServerAddress localhost $UDPServerRun 514 *.* 
-@@(o)127.0.0.1:6514;RSYSLOG_SyslogProtocol23Format
+#$WorkDirectory /tmp/rsyslog # temporary directory for storing data
+#$ActionQueueType LinkedList # use asynchronous processing
+#$ActionQueueFileName srvrfwd # set file name, also enables disk mode
+#$ActionResumeRetryCount -1 # infinite retries on insert failure
+#$ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down
+#$ModLoad imudp #loads the udp module
+#listen for messages on udp localhost:514 $UDPServerAddress localhost $UDPServerRun 514 *.*
+*.* @(o)127.0.0.1:6514;RSYSLOG_SyslogProtocol23Format
