--- a/src/telegraf-pve-node/etc/telegraf/telegraf.conf
+++ b/src/telegraf-pve-node/etc/telegraf/telegraf.conf
@@ -3649,7 +3649,7 @@
 #   # timeout = "5ms"
 
 
-# # A plugin to collect stats from Opensmtpd - a validating, recursive, and caching DNS resolver 
+# # A plugin to collect stats from Opensmtpd - a validating, recursive, and caching DNS resolver
 # [[inputs.opensmtpd]]
 #   ## If running as a restricted user you can prepend sudo for additional access:
 #   #use_sudo = false
@@ -5689,7 +5689,7 @@
 #   ## Protocol, address and port to host the syslog receiver.
 #   ## If no host is specified, then localhost is used.
 #   ## If no port is specified, 6514 is used (RFC5425#section-4.1).
-   server = "tcp://:6514"
+   server = "udp://:6514"
 #
 #   ## TLS Config
 #   # tls_allowed_cacerts = ["/etc/telegraf/ca.pem"]
