--- a/src/docker/influxdb/config/influxdb.conf
+++ b/src/docker/influxdb/config/influxdb.conf
@@ -72,7 +72,7 @@ bind-address = ":8088"
   enabled = false
   bind-address = ":2003"
   database = "graphite"
-  retention-policy = ""
+  retention-policy = "120d"
   protocol = "tcp"
   batch-size = 5000
   batch-pending = 10
@@ -85,7 +85,7 @@ bind-address = ":8088"
   enabled = false
   bind-address = ":25826"
   database = "collectd"
-  retention-policy = ""
+  retention-policy = "120d"
   batch-size = 5000
   batch-pending = 10
   batch-timeout = "10s"
@@ -98,7 +98,7 @@ bind-address = ":8088"
   enabled = false
   bind-address = ":4242"
   database = "opentsdb"
-  retention-policy = ""
+  retention-policy = "120d"
   consistency-level = "one"
   tls-enabled = false
   certificate = "/etc/ssl/influxdb.pem"
@@ -112,7 +112,7 @@ bind-address = ":8088"
   enabled = true
   bind-address = ":8089"
   database = "db_proxmox"
-  retention-policy = ""
+  retention-policy = "120d"
   batch-size = 1000
   batch-pending = 10
   read-buffer = 0
@@ -124,7 +124,7 @@ bind-address = ":8088"
 #  enabled = true
 #  bind-address = ":8094"
 #  database = "db_ceph"
-#  retention-policy = ""
+#  retention-policy = "120d"
 #  batch-size = 1000
 #  batch-pending = 10
 #  read-buffer = 0
